fix wrapping elements in hero block

--- a/style.css
+++ b/style.css
@@ -83,8 +83,9 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    gap: 1rem;
+    justify-content: center;
+    flex-wrap: wrap-reverse;
+    gap: 4rem;
     max-width: 80vw;
     padding: 5rem 0;
 }
@@ -93,6 +94,8 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    width: 40vw;
+    text-wrap: pretty;
 }
 
 .info h1 {
@@ -116,5 +119,5 @@ body {
 }
 
 .hero > img {
-    height: 200px;
+    max-height: 20vh;
 }
